-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 8u60
-
Component/s: hotspot
-
b14
-
b21
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8129868 | 8u65 | Erik Helin | P1 | Resolved | Fixed | b03 |
| JDK-8137702 | emb-8u65 | Unassigned | P1 | Resolved | Fixed | b03 |
| JDK-8130553 | emb-8u60 | Erik Helin | P1 | Resolved | Fixed | b21 |
A bug introduced in the fix for JDK-8049864 causes the code heap to only use small pages
- backported by
-
JDK-8129868 Code heap does not use large pages
-
- Resolved
-
-
JDK-8130553 Code heap does not use large pages
-
- Resolved
-
-
JDK-8137702 Code heap does not use large pages
-
- Resolved
-
- relates to
-
JDK-8049864 TestParallelHeapSizeFlags fails with unexpected heap size
-
- Resolved
-
-
JDK-8087339 The code heap might use different alignment for committed size and reserved size
-
- Resolved
-