8087200: Code heap does not use large pages Reviewed-by: stefank, tschatzl, thartmann